--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
 img {
     width: 200px;
+    height: auto;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+h2 {
+    font-size: 28px;
+}
+
+h3 {
+    font-size: 24px;
+}
+
+p {
+    font-size: 20px;
+}
+
+a {
+    font-size: 20px;
+}
+
+li {
+    font-size: 20px;
 }
